<resources>
    <string name="app_name">EventosGaliciApp</string>
    <string name="mas_eventos">Eventos relacionados</string>
    <string name="concertos">Concertos</string>
    <string name="festivais">Festivais</string>
    <string name="festPopulares">Festas Populares</string>
    <string name="atopa_o_teu_concerto_favorito">Atopa o teu concerto favorito</string>
    <string name="atopa_o_teu_festival_favorito">Atopa o teu festival favorito</string>
    <string name="atopa_a_tua_festa_popular_favorita">Atopa a tua festa favorita</string>
    <string name="provincias">Provincias :</string>
    <string name="filtra_nas_cidades">Filtra nas cidades</string>
    <string name="ya_tengo_una_cuenta"><u>Xa teño unha conta!</u></string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="restablecer_contrasinal">Restablecer contrasinal</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="registro">Rexístro</string>
    <string name="prezo">Prezo: </string>
    <string name="prezo2">Prezo </string>
    <string name="cerrar_sesion">Pechar Sesion </string>
    <string name="seguro">Estás seguro de que queres pechar a sesión? </string>
    <string name="sair">Sair</string>
    <string name="si" translatable="false">Si</string>
    <string name="no">Non</string>
    <string name="selecciona_tipo_evento" translatable="false">Elixe o tipo de evento</string>
    <string name="fecha">Data:</string>
    <string name="otro_evento">Queres agregar outro evento?</string>
    <string name="rol_inicio_sesion">Iniciou sesión como </string>

    <!--Texto Toast-!-->

    <string name="empty_fields">Hai campos vacios.</string>
    <string name="invalid_email">O correo eletrónico non esta ben formado</string>
    <string name="short_password">O contrasinal debe ter minimo 6 caracteres</string>
    <string name="inicio_sesion">Iniciou sesión</string>
    <string name="error_sesion">Erro no inicio de sesión</string>
    <string name="usuario_creado">Usuario creado correctamente.</string>
    <string name="usuario_existe">O usuario xa existe.</string>
    <string name="error_usuario">Erro no rexistro do usuario.</string>
    <string name="envio_email">Correo para restablecer contrasinal enviado.</string>
    <string name="error_envio_email">Erro ao enviar correo para restablecer contrasinal.</string>
    <string name="mercar_entradas">Mercar Entradas</string>
    <string name="subir_imagen">SUBIR IMAGEN</string>
    <string name="selecciona_imagen">SELECCIONA IMAGEN</string>
    <string name="concerto_existe">Xa existe un evento con ese nome</string>
    <string name="concerto_agregado">Evento engadido</string>
    <string name="concerto_erro">Erro</string>

    <!--Provincias-!-->
    <string name="a_corunha">A Coruña</string>
    <string name="pontevedra">Pontevedra</string>
    <string name="ourense">Ourense</string>
    <string name="lugo">Lugo</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="contrasinal">Contrasinal</string>
    <string name="email">Email</string>
    <string name="olvidaches_o_contrasinal">Olvidaches o contrasinal?</string>
    <string name="quieres_agregar_un_evento">Queres anunciar un evento?</string>
    <string name="nome_evento">Nome Evento</string>
    <string name="lugar">Lugar</string>
    <string name="xenero">Xenero</string>
    <string name="imaxen_url">Imaxen URL</string>
    <string name="data">Data</string>
    <string name="url_entrada">Url Mercar Entrada</string>
    <string name="provincia">Provincia</string>
    <string name="nome_id">Nome ID</string>
</resources>