<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <Button
                android:id="@+id/btn_seleccionarImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Seleccionar imagen"
                android:layout_gravity="center"/>

            <ImageView
                android:id="@+id/iv_insertarImagen"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:scaleType="centerCrop" />

            <Button
                android:id="@+id/btn_subirImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subir_imagen"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_rellenarEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <EditText
                android:id="@+id/et_nombreId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_id" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="Provincia:"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <Spinner
                    android:id="@+id/sp_provincia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <EditText
                android:id="@+id/et_compraEntrada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_entrada" />

            <EditText
                android:id="@+id/et_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data" />

            <EditText
                android:id="@+id/et_genero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/xenero" />

            <EditText
                android:id="@+id/et_imagenUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/imaxen_url" />

            <EditText
                android:id="@+id/et_lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lugar" />

            <EditText
                android:id="@+id/et_nombreConciertos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_evento" />

            <EditText
                android:id="@+id/et_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prezo2" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Crear Evento"
               android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>