<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_resto">
    <include
        layout="@layout/toolbar_eventos"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <ProgressBar
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>


        <EditText
            android:id="@+id/et_buscador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/atopa_o_teu_concerto_favorito"
            android:visibility="gone"
            android:gravity="center"
            android:textColor="#8BC34A"
            android:padding="10dp"
            android:drawablePadding="10dp"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:background="@drawable/edittext_background"
            android:layout_gravity="center" />



    <LinearLayout
        android:id="@+id/ll_filtro_ciudad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:background="@drawable/edittext_background">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provincias"
            android:textColor="#8BC34A"
            android:textSize="16sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="bold"
            android:paddingLeft="16dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/cb_acoruna"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a_corunha" />

            <CheckBox
                android:id="@+id/cb_pontevedra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pontevedra" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/cb_ourense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ourense" />

            <CheckBox
                android:id="@+id/cb_lugo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lugo" />

        </LinearLayout>





    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_eventos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.recyclerview.widget.RecyclerView>

    <include layout="@layout/toolbar_foot" />

</LinearLayout>