<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiente_main">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_menu" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnConciertos"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/concertos"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnFestivales"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/festivais"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnFestPopulares"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/festPopulares"
            android:textColor="@android:color/white"
            android:textSize="22sp"/>
    </LinearLayout>

</LinearLayout>