<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradiente_main">
<!--
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/opc_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp" />
            <ImageView
                android:id="@+id/opc_buscador"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/lupa"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar> -->

    <disenho.CircularImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/definitiva"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/btnConciertos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/concertos"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnFestivales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/festivais"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnFestPopulares"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_style"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:text="@string/festPopulares"
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>